# SpringResearch

./: README.md  manage.py  pyproject.toml
SpringResearch/: PRT_busStops.py  busNetwork.py  busStop.py  clean.py  create_df.py  csv_merger.py  map.py  pitt_walkability_merger.py  tempCodeRunnerFile.py
SpringResearch/Bus_Folder/: busNetwork.py  busStop.py
SpringResearch/Map_Folder/: map.py
SpringResearch/Merging_Folder/: PRT_busStops.py  csv_merger.py  pitt_walk_busstops_merger.py  pitt_walkability_merger.py
SpringResearch/database/: clean_data_for_db.py  create_stops_db.py  queries.sql
SpringResearch/django_folder/: toy_django.py
SpringResearch/elev_app/: app.py  elev_tools.py
SpringResearch/elev_app/templates/: input.html  prt_form.html
SpringResearch/flask_folder/: flask_methods.py  main.py  server.py
SpringResearch/flask_folder/templates/: index.html  input.html
SpringResearch/scripts/: map.py  stops_to_db.py
SpringResearch/walksheds_folder/: bus_routes.py  config.yaml  elevation_finder.py  find_elevation.py  strm_format.py  walksheds.py
elevation/: urls.py  views.py
web_project/: settings.py  urls.py
