[tool.poetry]
name = "springresearch"
version = "0.1.0"
description = ""
authors = ["shearere2 <shearere2@duq.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
geopandas = "^0.14.3"
shapely = "^2.0.3"
geoplot = "^0.5.1"
plotly-express = "^0.4.1"
pyarrow = "^15.0.0"
django = "^5.0.3"
geocoder = "^1.38.1"
flask = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
